# uge-bonkathon-smart-contract

./: README.md  README_CONTRACT
client/: .example-env  package-lock.json  package.json
client/src/: account.ts  buyToken.ts  claim.ts  close.ts  closeTokenSale.ts  index.ts  init.ts  setup.ts  stake.ts  startTokenSale.ts  util.ts  utils.ts  withdraw.ts
contract/: Cargo.toml  DOCUMENT
contract/src/: error.rs  instruction.rs  processor.rs  state.rs
